<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="173dp"
            android:layout_marginRight="173dp"
            android:layout_marginBottom="547dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/verification"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewVerificationCodeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="199dp"
            android:layout_marginEnd="108dp"
            android:layout_marginRight="108dp"
            android:layout_marginBottom="511dp"
            android:text="@string/VerificationCodeInfo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="257dp"
            android:layout_marginEnd="251dp"
            android:layout_marginRight="251dp"
            android:layout_marginBottom="453dp"
            android:text="@string/PhoneExample"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextVerificationCode1"
            android:layout_width="75dp"
            android:layout_height="47dp"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="317dp"
            android:layout_marginEnd="293dp"
            android:layout_marginRight="293dp"
            android:layout_marginBottom="365dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/One"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextVerificationCode2"
            android:layout_width="75dp"
            android:layout_height="47dp"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="317dp"
            android:layout_marginEnd="206dp"
            android:layout_marginRight="206dp"
            android:layout_marginBottom="365dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Two"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextVerificationCode3"
            android:layout_width="75dp"
            android:layout_height="47dp"
            android:layout_marginStart="211dp"
            android:layout_marginLeft="211dp"
            android:layout_marginTop="317dp"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:layout_marginBottom="365dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Three"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextVerificationCode4"
            android:layout_width="75dp"
            android:layout_height="47dp"
            android:layout_marginStart="292dp"
            android:layout_marginLeft="292dp"
            android:layout_marginTop="317dp"
            android:layout_marginEnd="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginBottom="365dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/Four"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="341dp"
            android:layout_height="58dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginBottom="279dp"
            android:text="@string/Confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>